# bitwise

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  build.rs  clippy.toml  index.html  readme.md  search-index.js
benches/: gcd.rs  morton.rs
bitwise/: index.html  sidebar-items.js  trait.Word.html  trait.Words.html
examples/: readme.rs
implementors/bitwise/: trait.Words.js
src/: lib.rs
src/bitwise/src/: lib.rs.html
src/word/: align_down.rs  align_up.rs  ceil_pow2.rs  clear_bit.rs  clear_bits_geq.rs  clear_bits_leq.rs  clear_least_significant_one.rs  clear_trailing_ones.rs  copy_bit.rs  count_leading_ones.rs  count_leading_zeros.rs  count_ones.rs  count_trailing_ones.rs  count_trailing_zeros.rs  count_zeros.rs  extract_bits.rs  flip_bit.rs  flip_bits_geq.rs  flip_bits_leq.rs  floor_pow2.rs  from_be.rs  from_le.rs  gcd.rs  hamming_distance.rs  inner_perfect_shuffle.rs  inner_perfect_unshuffle.rs  is_aligned.rs  is_even.rs  is_odd.rs  is_pow2.rs  isolate_least_significant_one.rs  isolate_least_significant_zero.rs  leading_ones.rs  leading_zeros.rs  mask_trailing_ones.rs  mask_trailing_ones_and_least_significant_zero.rs  mask_trailing_zeros.rs  mask_trailing_zeros_and_least_significant_one.rs  mod.rs  morton.rs  (+31 more)
