[package]
name = "bitwise"
version = "0.1.0"
authors = ["gnzlbg <gonzalobg88@gmail.com>"]
description = "Bitwise manipulation algorithms for words and sequences."
documentation = "https://gnzlbg.github.io/bitwise"
homepage = "https://gnzlbg.github.io/bitwise"
repository = "https://github.com/gnzlbg/bitwise"
readme = "readme.md"
keywords = ["bitwise", "algorithm", "bit", "byte"]
license = "MIT"
build = "build.rs"

[dependencies]
bitintr = "0.1.*"

[build-dependencies]
rustc_version = "0.1.*"

[dev-dependencies]
bencher = "0.1.*"

[[bench]]
name = "morton"
bench = true
harness = false