[package]
name = "bitwise"
version = "0.2.0"
authors = ["gnzlbg <gonzalobg88@gmail.com>"]
description = "Portable high-level bitwise manipulation algorithms."
documentation = "https://gnzlbg.github.io/bitwise"
homepage = "https://gnzlbg.github.io/bitwise"
repository = "https://github.com/gnzlbg/bitwise"
readme = "readme.md"
keywords = ["portable", "bit", "manipulation", "algorithms"]
license = "MIT"
build = "build.rs"
categories = ["algorithms", "hardware-support", "no-std"]

[badges]
travis-ci = { repository = "gnzlbg/bitwise", branch = "master" }

[build-dependencies]
rustc_version = "0.2"

[dependencies]
bitintr = "0.2"

[dev-dependencies]
bencher = "0.1"
quickcheck = "0.6"

[[bench]]
name = "morton"
bench = true
harness = false

[[bench]]
name = "gcd"
bench = true
harness = false


[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
